--- a/CarteiraDigital/index.html
+++ b/CarteiraDigital/index.html
@@ -5,10 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
     <link rel="stylesheet" href="src/style.css">
-    <title>Document</title>
+    <title>Carteira Digital</title>
 </head>
 <body>
-    
+
+  <div class="container mt-4">
+    <h1 class="display-4 text-center">
+      <i class="fas fa-book-open text-primary"></i>Carteira<span class="text-primary">Digital</span> Online</h1>
+      <form id="">
+          <div class="form-grup form">
+              <label for="titulo">Nome da carteira</label>
+              <input type="text" id="titulo" class="form-control">
+          </div>
+          <div class="form-grup form">
+              <label for="renda">Renda inicial</label>
+              <input type="text" id="renda" class="form-control">
+          </div>
+       
+
+          <input type="submit" value="Acidicionar nova carteira"
+          class="btn btn-primary btn-block mt-3" id="enviar">
+      </form>
+      <table class="table table-striped mt-5">
+        <thead>
+            <tr>
+                <th>Carteiras</th>
+                <th>Renda</th>
+                <th>Saldo devedor</th>
+            </tr>
+        </thead> 
+        <tbody id=""></tbody> 
+      </table>
+</div>
+
+ 
+
+
+<script src="src/main.js"></script>
+<!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+    -->
+
 </body>
 </html>
